hard-gists/831611/run.log
=== Docker Run Log for 831611 ===
Started at: Mi 29. Okt 17:43:03 CET 2025

[2025-10-29 17:43:04] START: Running container for 831611
[2025-10-29 17:43:04] SUCCESS: Container 46059ebdd07c637156480c4b952c29c633ead90a66615e00655e7dac929b93b0 started for 831611
=== Container logs for 831611 ===
  File "/snippet.py", line 26
    print """usage:
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 831611 ===
[2025-10-29 17:43:06] INFO: Container 46059ebdd07c637156480c4b952c29c633ead90a66615e00655e7dac929b93b0 has stopped
